navigation has "burger menu" when screen width is small (at default collapse width); fixed main table overflowing when resizing

--- a/src/main/resources/static/css/mainPage.css
+++ b/src/main/resources/static/css/mainPage.css
@@ -3,6 +3,7 @@ h1 {
     text-shadow: -2px 2px 3px black;
     font-weight: bold;
     color: dimgray;
+    padding: 1px;
 }
 
 .line1 {
